added axios calls to the front-end that record Rollback warnings and critical events

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
 <body>
     <div id="container">
         <h1>Hi!</h1>
+        <div id="rollbar-buttons">
+            <button id="warning">Send a warning event</button>
+            <button id="critical">Send a critical event</button>
+        </div>
     </div>
 </body>
+<script src="/axios"></script>
+<script src="common.js"></script>
 </html> 
